@@ -36,6 +36,10 @@
 
       \item \code{cairo_ps(onefile = TRUE)} generates encapsulated EPS
       on platforms with cairo >= 1.6.
+      
+      \item \code{strptime()} now accepts times such as \samp{24:00} for
+      midnight at the end of the day, for although these are disallowed by
+      POSIX 1003.1-2008, ISO 8601:2004 allows them.
     }
   }
 
